# Restaurant-finder

./: .gitignore  README.md  package-lock.json
app/client/: README.md  package-lock.json  package.json
app/client/shell/: app.ts  package.json  tsconfig.json
app/client/shell/components/: chatTextArea.ts  main_agent.ts  temp_surface.ts
app/client/shell/configs/: agent_config.ts  restaurant.ts
app/client/shell/services/: client.ts
app/client/shell/ui/: ui.ts
app/client/shell/ui/custom-components/: map-area.ts
app/server/: .env.example  README.md  __main__.py  pyproject.toml
app/server/agent/: a2ui_components.py  agent_executor.py  graph_executor.py  langchain_tools.py  oci_agent.py  prompt_builder.py
app/server/agent/graph/: apify_places_agent.py  data_agent.py  food_place_agent.py  formatter_agent.py  presenter_agent.py  restaurant_graph.py  struct.py
app/server/agent/mcp/: caffeteria_data.json  data_server.py  food_place_server.py  italian_data.json
